Misc updates and improvements including docs blocks and a way to ensure robots are not placed to close to each other.

--- a/server/src/main/resources/static/index.html
+++ b/server/src/main/resources/static/index.html
@@ -1,4 +1,4 @@
-<html>
+<html lang="en">
   <head>
     <title>Kotlin Robots</title>
     <meta charset="utf-8" />
@@ -109,23 +109,6 @@
                 </label>
               </td>
             </tr>
-<!--            <tr>-->
-<!--              <td>-->
-<!--                <label>-->
-<!--                  Robot Timeout Seconds-->
-<!--                  <input type="number" id="robotTimeoutSeconds" />-->
-<!--                </label>-->
-<!--              </td>-->
-<!--              <td>-->
-<!--                <label>-->
-<!--                  Game Loop Type-->
-<!--                  <select id='gameLoopType'>-->
-<!--                    <option value="recursive">Recursive</option>-->
-<!--                    <option value="stepFunction">Step Function</option>-->
-<!--                  </select>-->
-<!--                </label>-->
-<!--              </td>-->
-<!--            </tr>-->
           </table>
         </details>
         <br />
